src/app/header/header.component.scss
a {
    color: white;
    padding-right: 15px;
    font-family: 'Inter';
    font-style: normal;
    font-weight: 500;
}

h1 {
    color: white;
}

.header {
    margin-top: 10vh;
    display: flex;
    align-items: center;
    justify-content: space-between;
    margin-bottom: 10vh;
    font-size: 25px;


    @media (max-width: 950px) {
        margin-top: 0vh;
    }
}


.logo {
    height: 7vh;

    &:hover{
        cursor: pointer;
    }
}

.rounterLinks {
    text-decoration: none;

    &:hover {
        color: #FA2759;
    }
}

.menuSection {
    display: flex;
    gap: 60px;

    @media (max-width: 950px) {
        display: none;
        // background-color: rgba(24, 23, 23, 0.87);
        // box-shadow: 0px 8px 16px 0px rgba(5, 5, 5, 0.151);
        // display: flex;
        // align-items: center;
        // justify-content: center;
        // position: absolute;
        // top: 10%;
        // left: 0;
        // right: 0;
        // gap: 20px;
        // min-height: 7vh;

        // a{
        //     text-align: center;
        //     margin-left: 10px;
        // }
    }
}








.container {
    width: 100vw;
    margin: auto;
  }
  
  .navbar {
    width: 100%;
    box-shadow: 0 1px 4px rgb(146 161 176 / 15%);
  }
  
  .nav-container {
    display: flex;
    justify-content: space-between;
    align-items: center;
    height: 62px;
  }
  
  .navbar .menu-items {
    display: flex;
  }
  
  .navbar .nav-container li {
    list-style: none;
  }
  
  .navbar .nav-container a {
    text-decoration: none;
    color: white;
    font-weight: 500;
    font-size: 2.2rem;
    padding: 0.7rem;
    font-family: 'Inter';
    font-style: normal;
  }
  
//   .navbar .nav-container a:hover{
//       font-weight: bolder;
//   }
  
  .nav-container {
    display: block;
    position: relative;
    height: 60px;
  }
  
  .nav-container .checkbox {
    position: absolute;
    display: block;
    height: 32px;
    width: 32px;
    top: 20px;
    left: 20px;
    z-index: 5;
    opacity: 0;
    cursor: pointer;
  }
  
  .nav-container .hamburger-lines {
    display: block;
    height: 26px;
    width: 32px;
    position: absolute;
    top: 17px;
    left: 20px;
    z-index: 2;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
  }
  
  .nav-container .hamburger-lines .line {
    display: block;
    height: 4px;
    width: 100%;
    border-radius: 10px;
    background: white;
  }
  
  .nav-container .hamburger-lines .line1 {
    transform-origin: 0% 0%;
    transition: transform 0.4s ease-in-out;
  }
  
  .nav-container .hamburger-lines .line2 {
    transition: transform 0.2s ease-in-out;
  }
  
  .nav-container .hamburger-lines .line3 {
    transform-origin: 0% 100%;
    transition: transform 0.4s ease-in-out;
  }
  
  .navbar .menu-items {
    padding-top: 120px;
    box-shadow: inset 0 0 2000px rgba(2, 2, 2, 0);
    height: 80vh;
    width: 100%;
    transform: translate(-150%);
    display: flex;
    flex-direction: column;
    margin-left: -50px;
    padding-left: 50px;
    transition: transform 0.5s ease-in-out;
    text-align: center;
    background-color:#131111;
  }
  
  .navbar .menu-items li {
    margin-bottom: 7.2rem;
    font-size: 1.5rem;
    font-weight: 500;
  }
  
  .logo {
    position: absolute;
    top: 5px;
    right: 15px;
    font-size: 1.2rem;
    color: #0e2431;
  }
  
  .nav-container input[type="checkbox"]:checked ~ .menu-items {
    transform: translateX(0);
  }
  
  .nav-container input[type="checkbox"]:checked ~ .hamburger-lines .line1 {
    transform: rotate(45deg);
  }
  
  .nav-container input[type="checkbox"]:checked ~ .hamburger-lines .line2 {
    transform: scaleY(0);
  }
  
  .nav-container input[type="checkbox"]:checked ~ .hamburger-lines .line3 {
    transform: rotate(-45deg);
  }
  
  .nav-container input[type="checkbox"]:checked ~ .logo{
    display: none;
  }

